server/logs/exceptions.log
2025-03-23 16:10:53 [ERROR]: uncaughtException: Cannot find module './models/loan'
Require stack:
- C:\rezerv\app\server\sequelize.js
- C:\rezerv\app\server\server.js
Error: Cannot find module './models/loan'
Require stack:
- C:\rezerv\app\server\sequelize.js
- C:\rezerv\app\server\server.js
    at Function._resolveFilename (node:internal/modules/cjs/loader:1249:15)
    at Function._load (node:internal/modules/cjs/loader:1075:27)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:219:24)
    at Module.require (node:internal/modules/cjs/loader:1340:12)
    at require (node:internal/modules/helpers:138:16)
    at loadModels (C:\rezerv\app\server\sequelize.js:101:27)
    at Object.<anonymous> (C:\rezerv\app\server\sequelize.js:124:16)
    at Module._compile (node:internal/modules/cjs/loader:1565:14)
    at Object..js (node:internal/modules/cjs/loader:1708:10)
2025-03-24 12:55:43 [ERROR]: uncaughtException: Cannot find module './models/debit_card'
Require stack:
- C:\rezerv\app\server\sequelize.js
- C:\rezerv\app\server\server.js
Error: Cannot find module './models/debit_card'
Require stack:
- C:\rezerv\app\server\sequelize.js
- C:\rezerv\app\server\server.js
    at Function._resolveFilename (node:internal/modules/cjs/loader:1249:15)
    at Function._load (node:internal/modules/cjs/loader:1075:27)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:219:24)
    at Module.require (node:internal/modules/cjs/loader:1340:12)
    at require (node:internal/modules/helpers:138:16)
    at loadModels (C:\rezerv\app\server\sequelize.js:104:27)
    at Object.<anonymous> (C:\rezerv\app\server\sequelize.js:127:16)
    at Module._compile (node:internal/modules/cjs/loader:1565:14)
    at Object..js (node:internal/modules/cjs/loader:1708:10)
2025-03-24 12:57:08 [ERROR]: uncaughtException: User.hasMany called with something that's not a subclass of Sequelize.Model
Error: User.hasMany called with something that's not a subclass of Sequelize.Model
    at User.hasMany (C:\rezerv\app\server\node_modules\sequelize\lib\associations\mixin.js:13:13)
    at User.associate (C:\rezerv\app\server\models\user.js:120:10)
    at loadModels (C:\rezerv\app\server\sequelize.js:115:27)
    at Object.<anonymous> (C:\rezerv\app\server\sequelize.js:127:16)
    at Module._compile (node:internal/modules/cjs/loader:1565:14)
    at Object..js (node:internal/modules/cjs/loader:1708:10)
    at Module.load (node:internal/modules/cjs/loader:1318:32)
    at Function._load (node:internal/modules/cjs/loader:1128:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:219:24)
2025-03-24 13:12:59 [ERROR]: uncaughtException: Unexpected identifier 'loan_id'
C:\rezerv\app\server\models\transaction.js:60
546    loan_id: {
       ^^^^^^^

SyntaxError: Unexpected identifier 'loan_id'
    at wrapSafe (node:internal/modules/cjs/loader:1515:18)
    at Module._compile (node:internal/modules/cjs/loader:1537:20)
    at Object..js (node:internal/modules/cjs/loader:1708:10)
    at Module.load (node:internal/modules/cjs/loader:1318:32)
    at Function._load (node:internal/modules/cjs/loader:1128:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:219:24)
    at Module.require (node:internal/modules/cjs/loader:1340:12)
    at require (node:internal/modules/helpers:138:16)
    at loadModels (C:\rezerv\app\server\sequelize.js:104:27)
2025-03-24 16:38:45 [ERROR]: uncaughtException: listen EADDRINUSE: address already in use :::5000
Error: listen EADDRINUSE: address already in use :::5000
    at Server.setupListenHandle [as _listen2] (node:net:1912:16)
    at listenInCluster (node:net:1969:12)
    at Server.listen (node:net:2074:7)
    at startServer (C:\rezerv\app\server\server.js:2175:12)
    at process.processTicksAndRejections (node:internal/process/task_queues:105:5)
2025-03-26 03:00:11 [ERROR]: uncaughtException: write EPIPE
Error: write EPIPE
    at afterWriteDispatched (node:internal/stream_base_commons:159:15)
    at writeGeneric (node:internal/stream_base_commons:150:3)
    at Socket._writeGeneric (node:net:964:11)
    at Socket._write (node:net:976:8)
    at writeOrBuffer (node:internal/streams/writable:572:12)
    at _write (node:internal/streams/writable:501:10)
    at Writable.write (node:internal/streams/writable:510:10)
    at Console.log (C:\rezerv\app\server\node_modules\winston\lib\winston\transports\console.js:87:23)
    at Console._write (C:\rezerv\app\server\node_modules\winston-transport\modern.js:103:17)
    at doWrite (C:\rezerv\app\server\node_modules\winston-transport\node_modules\readable-stream\lib\_stream_writable.js:390:139)
2025-03-31 16:34:17 [ERROR]: uncaughtException: Cannot find module '../controllers/auth'
Require stack:
- C:\rezerv\app\server\routes\auth.js
- C:\rezerv\app\server\routes\index.js
- C:\rezerv\app\server\app.js
- C:\rezerv\app\server\server.js
Error: Cannot find module '../controllers/auth'
Require stack:
- C:\rezerv\app\server\routes\auth.js
- C:\rezerv\app\server\routes\index.js
- C:\rezerv\app\server\app.js
- C:\rezerv\app\server\server.js
    at Function._resolveFilename (node:internal/modules/cjs/loader:1249:15)
    at Function._load (node:internal/modules/cjs/loader:1075:27)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:219:24)
    at Module.require (node:internal/modules/cjs/loader:1340:12)
    at require (node:internal/modules/helpers:138:16)
    at Object.<anonymous> (C:\rezerv\app\server\routes\auth.js:3:27)
    at Module._compile (node:internal/modules/cjs/loader:1565:14)
    at Object..js (node:internal/modules/cjs/loader:1708:10)
    at Module.load (node:internal/modules/cjs/loader:1318:32)
2025-03-31 16:35:37 [ERROR]: uncaughtException: Cannot find module '../controllers/auth'
Require stack:
- C:\rezerv\app\server\routes\auth.js
- C:\rezerv\app\server\routes\index.js
- C:\rezerv\app\server\app.js
- C:\rezerv\app\server\server.js
Error: Cannot find module '../controllers/auth'
Require stack:
- C:\rezerv\app\server\routes\auth.js
- C:\rezerv\app\server\routes\index.js
- C:\rezerv\app\server\app.js
- C:\rezerv\app\server\server.js
    at Function._resolveFilename (node:internal/modules/cjs/loader:1249:15)
    at Function._load (node:internal/modules/cjs/loader:1075:27)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:219:24)
    at Module.require (node:internal/modules/cjs/loader:1340:12)
    at require (node:internal/modules/helpers:138:16)
    at Object.<anonymous> (C:\rezerv\app\server\routes\auth.js:3:27)
    at Module._compile (node:internal/modules/cjs/loader:1565:14)
    at Object..js (node:internal/modules/cjs/loader:1708:10)
    at Module.load (node:internal/modules/cjs/loader:1318:32)
